--- a/client/src/pages/Signup/Signup.module.scss
+++ b/client/src/pages/Signup/Signup.module.scss
@@ -21,11 +21,11 @@
     // padding-inline: 0.5rem;
     letter-spacing: 5px;
     position: relative;
-    text-shadow: 0px 0px 15px #c6a2ff;
+    // text-shadow: 0px 0px 15px #c6a2ff;
     // background-color: rgba(#c6a2ff, 0.1);
-    box-shadow: 0px 0px 25px 0px #c6a2ff, inset 0px 0px 25px 0px #c6a2ff;
+    // box-shadow: 0px 0px 25px 0px #c6a2ff, inset 0px 0px 25px 0px #c6a2ff;
     border-radius: 5px;
-    border: 2px solid $clr-light;
+    // border: 2px solid $clr-light;
     padding: 1rem;
     margin-top: 1rem;
     cursor: pointer;
@@ -53,15 +53,15 @@ form.signup-form {
         // box-shadow: 0px 0px 25px 2px rgba($clr-dark, 0.1);
         // border: 4px solid white;
         transition: all 0.2s ease-in-out;
-        border: 3px solid white;
-        box-shadow: 0px 0px 15px 0px #c6a2ff, inset 0px 0px 10px 0px #c6a2ff;
+        border: 3px solid $clr-contrast;
+        // box-shadow: 0px 0px 15px 0px #c6a2ff, inset 0px 0px 10px 0px #c6a2ff;
         transition: all 0.2s ease-in-out;
         background-color: rgba(black, 0);
-        color: white;
-        text-shadow: 0 0 2px #c6a2ff;
+        color: $clr-dark;
+        // text-shadow: 0 0 2px #c6a2ff;
         &::placeholder {
-            color: white;
-            text-shadow: 0 0 5px red;
+            color: $clr-dark;
+            // text-shadow: 0 0 5px red;
             font-weight: 200;
             position: absolute;
             font-size: 12px;
@@ -71,7 +71,7 @@ form.signup-form {
         }
         &:focus {
             // box-shadow: 0px 0px 25px 2px rgba($clr-dark, 0.3);
-            box-shadow: 0px 0px 25px 0px #decaff, inset 0px 0px 5px 0px #c6a2ff;
+            // box-shadow: 0px 0px 25px 0px #decaff, inset 0px 0px 5px 0px #c6a2ff;
             // border: 4px solid $clr-contrast;
             transition: all 0.2s ease-in-out;
             &::placeholder {
@@ -85,12 +85,12 @@ button.signup-btn {
         // background-color: $clr-contrast;
         background-color: rgba(black, 0);
         // color: $clr-light;
-        color: white;
-        text-shadow: 0 0 5px #c6a2ff;
+        color: $clr-contrast;
+        // text-shadow: 0 0 5px #c6a2ff;
         padding: 1rem 2rem;
         border-radius: 5px;
-        border: 3px solid white;
-        box-shadow: 0 0 15px 0px #c6a2ff, inset 0 0 15px 0px #c6a2ff;
+        border: 3px solid $clr-contrast;
+        // box-shadow: 0 0 15px 0px #c6a2ff, inset 0 0 15px 0px #c6a2ff;
         font-weight: 600;
         transition: all 0.2s ease-in-out;
         &:hover {
@@ -106,11 +106,11 @@ button.signup-btn {
 
 .error-field {
     position: absolute;
-    top: 30vh;
+    top: 35vh;
     left: 1rem;
-    color: rgb(255, 183, 183);
-    text-shadow: 0 0 5px red;
-    font-size: 20px;
+    color: red;
+    // text-shadow: 0 0 5px red;
+    font-size: 15px;
     font-family: $fnt-main;
     text-transform: uppercase;
     gap: 1rem;
