--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,8 +1,8 @@
 $clr-light: #eeeeee;
 // $clr-dark: #1c1c1c;
-$clr-dark: black;
+$clr-dark: rgb(17, 17, 17);
 // $clr-contrast: rgb(42, 49, 98);
-$clr-contrast: rgb(255, 255, 255);
+$clr-contrast: rgb(85, 51, 135);
 
 $clr-active: #efefef;
 $clr-hover: #ffffff;
