--- a/client/src/styles/_fonts.scss
+++ b/client/src/styles/_fonts.scss
@@ -2,4 +2,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 
-$fnt-main: 'Audiowide', cursive;
+$fnt-main: 'Comfortaa', serif;
