--- a/client/src/components/Input/Input.module.scss
+++ b/client/src/components/Input/Input.module.scss
@@ -11,14 +11,14 @@
     resize: none;
     overflow: hidden;
     background-color: rgba(black, 0);
-    box-shadow: 0px 0px 15px 0 #c6a2ff, inset 0px 0px 5px 0 #c6a2ff;
+    // box-shadow: 0px 0px 15px 0 #c6a2ff, inset 0px 0px 5px 0 #c6a2ff;
     transition: all 0.2s ease-in-out;
-    border: 2px solid white;
+    border: 2px solid $clr-contrast;
     // background-color: $clr-active;
-    color: white;
+    // color: white;
     font-weight: 200;
     &:focus {
-        box-shadow: 0px 0px 25px 0 #c6a2ff, inset 0px 0px 5px 0 #c6a2ff;
+        // box-shadow: 0px 0px 25px 0 #c6a2ff, inset 0px 0px 5px 0 #c6a2ff;
         transition: all 0.2s ease-in-out;
     }
     &::placeholder {
