--- a/client/src/models/FriendModel/FriendModel.module.scss
+++ b/client/src/models/FriendModel/FriendModel.module.scss
@@ -1,12 +1,13 @@
+@import '../../styles/colors';
 
 .Friend {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border: 3px solid white;
-    text-shadow: 0px 0px 5px #c6a2ff;
-    box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
+    border: 3px solid $clr-contrast;
+    // text-shadow: 0px 0px 5px #c6a2ff;
+    // box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 2rem;
@@ -18,18 +19,19 @@
         button.functional-btn {
             aspect-ratio: 1\2;
             width: 13rem;
-            border: 2px solid white;
+            border: 2px solid $clr-contrast;
             background-color: rgba(black, 0);
-            text-shadow: 0px 0px 5px #c6a2ff;
-            box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
+            // text-shadow: 0px 0px 5px #c6a2ff;
+            // box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
             font-weight: 400;
-            color: white;
+            // color: white;
+            color: $clr-dark;
             padding: 1rem;
             border-radius: 5px;
             transition: all 0.2s ease-in-out;
             &:hover, :focus {
-                box-shadow: 0px 0px 15px #c6a2ff, inset 0px 0px 10px #c6a2ff;
-                text-shadow: 0px 0px 10px #c6a2ff;
+                // box-shadow: 0px 0px 15px #c6a2ff, inset 0px 0px 10px #c6a2ff;
+                // text-shadow: 0px 0px 10px #c6a2ff;
                 transition: all 0.2s ease-in-out;
             }
         }
