--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -4,6 +4,7 @@
 .UserPage {
     display: flex;
     flex-direction: column;
+    color: $clr-dark;
 }
 
 .user-info {
@@ -20,15 +21,15 @@
     flex-direction: column;
     gap: 1rem;
     .username {
-        color: $clr-contrast;
+        // color: $clr-contrast;
         font-family: $fnt-main;
         font-weight: 600;
         font-size: 40px;
-        text-shadow: 0px 0px 10px #c6a2ff;
+        // text-shadow: 0px 0px 10px #c6a2ff;
         transition: all 0.2s ease-in-out;
         cursor: pointer;
         &:hover {
-            text-shadow: 0px 0px 15px #c6a2ff;
+            // text-shadow: 0px 0px 15px #c6a2ff;
             transition: all 0.2s ease-in-out;
         }
     }
@@ -43,12 +44,12 @@
         aspect-ratio: 1;
         width: 15px;
         border-radius: 50%;
-        background-color: rgb(255, 176, 176);
-        box-shadow: 0px 0px 15px rgb(255, 176, 176), inset 0px 0px 5px rgb(255, 176, 176);
+        // background-color: rgb(255, 176, 176);
+        // box-shadow: 0px 0px 15px rgb(255, 176, 176), inset 0px 0px 5px rgb(255, 176, 176);
         border: none;
         &.online {
-            background-color: rgb(176, 255, 181) !important;
-            box-shadow: 0px 0px 5px rgb(76, 255, 88) !important;
+            // background-color: rgb(176, 255, 181) !important;
+            // box-shadow: 0px 0px 5px rgb(76, 255, 88) !important;
         }
     }
 }
@@ -58,7 +59,7 @@
     aspect-ratio: 1;
     width: 300px;
     border: 3px solid white;
-    box-shadow: 0px 0px 20px #c6a2ff;
+    // box-shadow: 0px 0px 20px #c6a2ff;
     border-radius: 10px;
 }
 
@@ -94,18 +95,24 @@
 .functional-btn {
     aspect-ratio: 1\2;
     width: 10rem;
-    border: 2px solid white;
+    border: 2px solid $clr-contrast;
+    color: $clr-contrast;
     background-color: rgba(black, 0);
-    text-shadow: 0px 0px 5px #c6a2ff;
-    box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
+    // text-shadow: 0px 0px 5px #c6a2ff;
+    // box-shadow: 0px 0px 10px #c6a2ff, inset 0px 0px 10px #c6a2ff;
     font-weight: 400;
-    color: white;
+    // color: white;
     padding: 1rem;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
     &:hover, :focus {
-        box-shadow: 0px 0px 15px #c6a2ff, inset 0px 0px 10px #c6a2ff;
-        text-shadow: 0px 0px 10px #c6a2ff;
+        // box-shadow: 0px 0px 15px #c6a2ff, inset 0px 0px 10px #c6a2ff;
+        // text-shadow: 0px 0px 10px #c6a2ff;
         transition: all 0.2s ease-in-out;
     }
+}
+
+.user-posts {
+    display: flex;
+    flex-direction: column-reverse;
 }
