--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -11,10 +11,10 @@ body {
   // font-family: 'Open Sans';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // background-color: $clr-light;
-  // color: $clr-dark;
-  background-color: $clr-dark;
-  color: white;
+  background-color: $clr-light;
+  color: $clr-dark;
+  // background-color: $clr-dark;
+  // color: white;
   
 }
 
@@ -110,11 +110,11 @@ h1,h2,h3,h4,h5,h6 {font-weight: 400; font-size: inherit;}
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: $clr-contrast;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px $clr-contrast;
 }
 
 input:checked + .slider:before {
@@ -138,6 +138,7 @@ input:checked + .slider:before {
   position: absolute;
   // display: flex;
   display: none;
+  // visibility: hidden;
   justify-content: center;
   // align-items: center;
   top: 15rem;
@@ -145,8 +146,10 @@ input:checked + .slider:before {
   width: 100%;
   height: 100%;
   // backdrop-filter: blur(5px);
-  // z-index: 999;
-  background-color: rgba(black, 0.7);
+  // z-index: -1;
+  // overflow: hidden;
+  // background-color: rgba(black, 0);
+  // backdrop-filter: blur(5px);
   &.spinner-signup {
     top: 9rem;
   }
@@ -160,7 +163,7 @@ input:checked + .slider:before {
 }
 .lds-ripple div {
   position: absolute;
-  border: 4px solid white;
+  border: 4px solid $clr-contrast;
   opacity: 1;
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
